# EquityTracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  migrate_to_postgres.py  run_analysis.ps1  run_custom_analysis.ps1
backend/: .dockerignore  .env.example  API.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  heimdal.json  pyproject.toml  tiker.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0001_initial_schema.py  20260503_0002_add_fund_tax_config.py
backend/app/: lifespan.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py
backend/app/domain/: enums.py  exceptions.py
backend/app/models/: __init__.py  base.py  daily_fund_price.py  fund.py  loan_rate_history.py  transaction.py
backend/app/repositories/: fund_repository.py  price_repository.py  rate_repository.py  transaction_repository.py
backend/app/schemas/: analytics.py  common.py  fund.py  price.py  rate.py  reports.py  transaction.py
backend/app/scripts/: cleanup_funds_without_market_value.py  fetch_yahoo_prices.py  fund_identity.py  generate_profit_report.py  import_dividend_distributions.py  import_heimdal_pluss_prices.py  import_loan_rates_seed.py  import_transactions_seed.py  seed_portfolio_data.py
backend/app/services/: fund_service.py  interest_service.py  market_data_service.py  (+3 more)
backend/tests/: conftest.py
backend/yahoo_prices/: fondsfinans-high-yield-a-0p000131aw-ir.json  heimdal-h-yrente-a-rentefond-nok-0p0001ils7-ir.json  kraft-corporate-bonds-b-0p0001plom-ir.json  kraft-high-yield-d-0p0001sch2-ir.json
(+63 files in other folders)
